# src/api/restaurant/dto/update-restaurant.dto.ts
@@ -1,0 +1,3 @@
+import { CreateRestaurantDto } from "./create-restaurant.dto";
+
+export class UpdateRestaurantDto extends CreateRestaurantDto { }
