# src/api/restaurant/restaurant.service.ts
@@ -2,7 +2,8 @@ import { filterQueryBuilder } from "../../utils/query-builder";
 import ApiResponse from "../../dto/api-response.dto";
 import restaurant from "../../models/restaurant";
 import { RestaurantFiltersDto } from "./dto/restaurant-filter.dto";
-
+import { responseMessage } from "../../constants/message.constant";
+import { responseErrors } from "../../constants/message.constant";
 
 export default class RestaurantService {
 
@@ -11,18 +12,13 @@ export default class RestaurantService {
         return new ApiResponse(200, true, data, 'success');
     }
 
-    async findOne(query: any, message: string) {
-        const data = await restaurant.findOne(query)
-        if (!data) return ApiResponse.BadRequestException(message)
-        else return data
-    }
-
     async findOneById(id: any) {
         if (isNaN(id)) {
-            return ApiResponse.BadRequestException("Invalid Id");
+            return ApiResponse.BadRequestException(responseErrors.INVALID_ID);
         }
-        const data = await this.findOne({ where: { restaurant_id: id } }, 'could not find any restaurant')
-        return new ApiResponse(200, true, data, 'success')
+        const data = await restaurant.findOne({ where: { restaurant_id: id } })
+        if (!data) return ApiResponse.BadRequestException(responseErrors.RES_NOT_FOUND)
+        else return new ApiResponse(200, true, data, 'success')
     }
 
     async filterRestaurant(restaurantFiltersDto: RestaurantFiltersDto) {
@@ -35,20 +31,45 @@ export default class RestaurantService {
 
     async createRestaurant(createRestaurantDto: any) {
         const data = await restaurant.findOne({ where: { restaurant_name: createRestaurantDto.restaurant_name } })
-        if (data) return ApiResponse.BadRequestException('restaurant with same name already existis')
+        if (data) return ApiResponse.BadRequestException(responseErrors.RES_NAME_EXISTS)
         createRestaurantDto.cost = createRestaurantDto.cost.toUpperCase()
         const response = await restaurant.create(createRestaurantDto)
-        return new ApiResponse(200, true, response, 'success')
+        return new ApiResponse(200, true, response, responseMessage.SUCC_CREATED)
     }
 
     async deleteRestaurant(id: any) {
         if (isNaN(id)) {
-            return ApiResponse.BadRequestException("Invalid Id");
+            return ApiResponse.BadRequestException(responseErrors.INVALID_ID);
         }
-        await this.findOne({ where: { restaurant_id: id } }, 'could not find any restaurant')
-        await restaurant.destroy({ where: { restaurant_id: id } });
-        return new ApiResponse(200, true, null, 'success');
+        const data = await restaurant.findOne({ where: { restaurant_id: id } })
+        if (!data) return ApiResponse.BadRequestException(responseErrors.RES_NOT_FOUND)
+        else {
+            await restaurant.destroy({ where: { restaurant_id: id } });
+            return new ApiResponse(200, true, null, 'success');
+        }
+    }
 
+    async updateRestaurant(id: any, updateRestaurantDto: any) {
+        if (isNaN(id)) {
+            return ApiResponse.BadRequestException(responseErrors.INVALID_ID);
+        }
+        if (Object.keys(updateRestaurantDto).length === 0) {
+            return new ApiResponse(200, true, null, responseMessage.SUCC_UPDTAED);
+        }
+        else {
+            if (updateRestaurantDto.restaurant_name) {
+                const data = await restaurant.findOne({ where: { restaurant_name: updateRestaurantDto.restaurant_name } })
+                if (data) {
+                    return ApiResponse.BadRequestException(responseErrors.RES_NAME_EXISTS)
+                }
+            }
+            updateRestaurantDto.cost = updateRestaurantDto?.cost?.toUpperCase()
+            const response = await restaurant.update(updateRestaurantDto, { where: { restaurant_id: id } });
+            if (response) {
+                return new ApiResponse(200, true, updateRestaurantDto, responseMessage.SUCC_UPDTAED);
+            }
+            else { return ApiResponse.InternalServerException(); }
+        }
     }
 
 
